src/objects/Reward__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>It will contain the percentage or fixed commission amount</description>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculation_method__c</fullName>
        <description>It specify the calculation that will need to be applied for the commission amount</description>
        <label>Calculation method</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disburse_Type__c</fullName>
        <label>Disburse Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Product_ASO__c</fullName>
        <label>Program Product ASO</label>
        <referenceTo>Program_Product_ASO__c</referenceTo>
        <relationshipName>Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <description>It determines whether the incentive is paid at disbursal or at the end of the loan</description>
        <label>Sales Role</label>
        <picklist>
            <picklistValues>
                <fullName>Telemarketing Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Loans Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Split_End__c</fullName>
        <label>Split End</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_Start__c</fullName>
        <label>Split Start</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>It determines whether the commission is paid at disbursal or at the end of the loan</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>At start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At end</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reward</label>
    <nameField>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>